general code refactors